# Model_Context_Protocol_Learning

./: README.md  main.py  pyproject.toml  python_tools.py  sticky_notes.py
mcp_docker_deploy/: README.md  dockerfile  main.py
